# entity_resolution

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: eda.ipynb  entity_matching_learned_settings  entity_matching_training.json
src/: logging_setup.py  main.py  preprocess.py  settings.py  train.py
