[tool.poetry]
name = "entity_mapper"
version = "0.1.0"
description = ""
authors = ["smithjustinm <smith.justinmatthew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pydantic = "^1.10.8"
structlog = "^23.1.0"
scikit_learn = "^1.0.1"
dedupe = "^2.0.0"
Unidecode = "^1.3.2"
jupyter = {version = "^1.0.0", optional = true}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-socket = "^0.5.1"
pytest-mock = "^3.10.0"
ruff = "^0.0.267"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.9.3"
bandit = "^1.7.0"
mypy = "^0.910.0"
ruff = "^0.0.267"

[tool.poetry.extras]
jupyter = ["jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
ignore = [
    'D203',
    'W503',
    'E203',
    'E266',
    'E501',
    'W503',
    'C901']
exclude = [
    '.tox',
    '.git',
    '__pycache__',
    'docs/source/conf.py',
    'sandbox/',
    'build',
    'dist',
    'test/fixtures/*',
    '*.pyc',
    '*.egg-info',
    '.cache',
    '.eggs'
]
max-complexity=20
import-order-style='google'

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[tool.coverage.html]
directory = "test-reports/htmlcov"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--asyncio-mode=auto"
testpaths = [
    "tests/test_unit",
]

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
